crates/tests/libs/bindgen/data/error/missing_self_wrong_receiver/input.rdl

#[win32]
mod Test {
    interface IFoo {
        fn Method(&mut self);
    }
}
        